--- a/index.html
+++ b/index.html
@@ -30,11 +30,8 @@
     </nav>
     <main>
         <h2>Welcome to,</h2>
-        <div class="about-us">
+        <div data-info="Rain Forest">
             <div class="about-us-text">
-                <h3>
-                    Rain Forest
-                </h3>
                 <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim dolor laudantium nemo vel veniam
                     laborum harum? Impedit, facere ut aliquam quisquam soluta quia veritatis sint ab inventore harum
@@ -42,11 +39,8 @@
                 </p>
             </div>
         </div>
-        <div class="about-us">
+        <div data-info="Path Forest">
             <div class="about-us-text">
-                <h3>
-                    Forest Path
-                </h3>
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem saepe praesentium, velit quod
                     voluptate est aliquam, modi quibusdam alias consequatur optio ducimus corrupti facilis facere
@@ -54,11 +48,8 @@
                 </p>
             </div>
         </div>
-        <div class="about-us">
+        <div data-info="Winter Forest">
             <div class="about-us-text">
-                <h3>
-                    Winter Forest
-                </h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora incidunt dolorem quidem illo? Modi
                     nesciunt deserunt dolor veniam. Culpa doloremque sunt error, asperiores cupiditate dignissimos
@@ -67,11 +58,8 @@
             </div>
 
         </div>
-        <div class="about-us">
+        <div data-info="Valley Forest">
             <div class="about-us-text">
-                <h3>
-                    Valley Forest
-                </h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum hic natus corporis cum qui doloremque
                     odio numquam corrupti minus libero praesentium molestiae, voluptas quidem cupiditate ipsam atque
@@ -79,6 +67,7 @@
                 </p>
             </div>
         </div>
+        <div class="sun"></div>
     </main>
     <footer>
         &copy; 2022
